--- a/Dropout_Prediction/Dropout_Prediction_and_Analysis.ipynb
+++ b/Dropout_Prediction/Dropout_Prediction_and_Analysis.ipynb
@@ -597,11 +597,12 @@
     "def RandomForestModel(X, Y):\n",
     "# finding the best hyperparameters\n",
     "    param_grid = {\n",
-    "    'bootstrap': [False,True],\n",
-    "    'max_depth': [3, 5, 10],\n",
-    "    'max_features': [2, 3, 4, None],\n",
+    "    'bootstrap': [True, False],\n",
+    "    'n_estimators': [20, 40, 80, 100],\n",
+    "    'max_depth': [3, 5, 10, None],\n",
+    "    'max_features': ['sqrt', 'log2', None],\n",
     "    'min_samples_split': [2, 5, 7],\n",
-    "    'n_estimators': [50, 100, 200]\n",
+    "    'criterion': ['gini', 'entropy']\n",
     "    }\n",
     "\n",
     "    rfc = RandomForestClassifier()\n",
