deleted some comments

--- a/Dropout_Prediction/Dropout_Prediction_and_Analysis.ipynb
+++ b/Dropout_Prediction/Dropout_Prediction_and_Analysis.ipynb
@@ -556,6 +556,8 @@
     }
    ],
    "source": [
+    "# Cross Tablulation Plot to check the status of students based on their Scholarship details.\n",
+    "\n",
     "pd.crosstab(df['Target'],df['Scholarship holder']).plot(figsize=(7, 4), kind=\"bar\",\n",
     "title=\"Scholarship Holders vs Status\",color=['lightblue', 'deepskyblue'])\n",
     "plt.legend(labels=['Non-Holders', 'Holders'])\n",
@@ -775,7 +777,7 @@
     "\n",
     "# Curricular units 1st sem (credited) has high correlation with 2nd sem (credited)\n",
     "# Curricular units 1st sem (enrolled) has high correlation with 2nd sem (enrolled)\n",
-    "# Curricular units 1st sem (evaluation) (0.79 correlation with sem 2)has high correlation with 2nd sem (evaluation)\n",
+    "# Curricular units 1st sem (evaluation) has high correlation with 2nd sem (evaluation)\n",
     "# Curricular units 1st sem (approved) has high correlation with 2nd sem (approved)\n",
     "# Curricular units 1st sem (grade) has high correlation with 2nd sem (grade)\n",
     "\n",
